fix:: add possibility to create attachment plugin per functionality - EXO-58740